Fix size issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ nav ul a {
 @media only screen and (max-width: 480px) {
     .text_h {
         padding: 4% 0;
-        font-size: 5em;
+        font-size: 4em;
         font-weight: 100;
         color: white;
     }
@@ -308,6 +308,17 @@ nav a.button-collapse {
 
 footer.page-footer {
     margin-top: 0px !important;
+}
+
+/* Hide logo name when real small */
+
+
+@media only screen and (max-width: 992px) {
+	nav .brand-logo {
+	    left: 80%;
+	    -webkit-transform: translateX(-80%);
+	    transform: translateX(-80%);
+	}
 }
 
 
